--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@apollo/server": "^4.10.4",
     "@graphql-tools/schema": "^10.0.3",
     "@graphql-tools/utils": "^10.2.0",
+    "@joi/date": "^2.1.1",
     "awilix": "^10.0.2",
     "axios": "^1.7.1",
     "bcryptjs": "^2.4.3",
@@ -23,6 +24,7 @@
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
