feat(xxx-01): add readme and update test names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    command: npm run dev
+    command: npm run start
 
   postgres:
     image: postgres:latest
